--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -1,1 +1,12 @@
-{{ question }}
+<h1>{{ question.question_text }}</h1>
+<ul>
+{% for choice in question.choice_set.all %}
+    <li>{{ choice.choice_text }}</li>
+{% endfor %}
+</ul>
+
+{% comment %} 
+Method-calling happens in the {% for %} loop: question.choice_set.all is interpreted 
+as the Python code question.choice_set.all(), which returns an iterable of Choice objects and 
+is suitable for use in the {% for %} tag. 
+{% endcomment %}
