exercise create question & addChoice

--- a/mysite/polls/templates/polls/detail.html
+++ b/mysite/polls/templates/polls/detail.html
@@ -29,3 +29,5 @@ suitable for use in the {% for %} tag. {% endcomment %}
   <input type="submit" value="Vote" />
 </form>
 <a href="{% url 'polls:addChoice' question.id %}"> add more choice </a>
+<br>
+<a href="{% url 'polls:index' %}"> index </a>
